# blue-finance

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.lock.txt  requirements.txt  sample_outputs1.txt
blue env/: pyvenv.cfg
data/: questionnaire_template.json  questionnaire_template_2.json
data/estimation_runs/6e2b7694-a05f-4f68-aa91-c807be50fb48/: progress.json
data/estimation_runs/6e2b7694-a05f-4f68-aa91-c807be50fb48/checkpoints/: 001_initializing.json  002_initializing.json  003_failed.json
data/estimation_runs/9ebc2f71-b638-47fb-9c8f-82c25f52685a/: progress.json
data/estimation_runs/b66549cb-9163-463b-9d40-095f07f16e1b/: progress.json
data/estimation_runs/cdd5e199-9ceb-4a8e-9ed5-7f33ee803737/: progress.json
data/estimation_runs/d42bf3d7-46cf-44d0-97ac-24af47e0bdbe/: progress.json
data/estimation_runs/f20df58e-f73a-4541-8569-e0c516bb790f/: progress.json
data/estimation_runs/f4a59d91-56dc-463d-92d4-60bcb6d7df10/: progress.json
memory/: best_practices.md  best_pratices.md  project_examples.md  project_memory.md
prompts/: browsing_agent_system.txt  document_parser_system.txt  orchestrator_system.txt  query_agent_system.txt
scripts/: build_index.py  run_estimation.py
src/blue_finance/: __init__.py  config.py  document_store.py  models.py  prompts.py
src/blue_finance/agents/: __init__.py  base.py  browsing_agent.py  document_parser.py  orchestrator.py  query_agent.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx
(+91 files in other folders)
