[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blue-finance-agents"
version = "0.1.0"
description = "LangChain-based multi-agent scaffold for blue finance structuring and estimation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "pydantic>=2.7.0",
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "pypdf>=4.2.0",
  "tavily-python>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
